# MyFirstScrapy

./: Makefile  README.md  pyproject.toml
tests/: conftest.py
tests/tutorial/spiders/: test_quotes_spider.py
tutorial/: items.py  middlewares.py  pipelines.py  settings.py
tutorial/spiders/: quotes_spider.py
